update colour scheme a bit

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,7 +5,7 @@
 :root {
 
   /* Default color shades */
-  --md-default-fg-color:               #252677;
+  --md-default-fg-color:               #15166d;
   --md-default-fg-color--light:        #1a0206;
   --md-default-fg-color--lighter:      rgb(11,33,57,0.5);
   --md-default-fg-color--lightest:     rgb(11,33,57,0.1);
@@ -17,7 +17,7 @@
 */
 
   /* Primary color shades */
-  --md-primary-fg-color:               #252677;
+  --md-primary-fg-color:               #15166d;
   --md-primary-fg-color--light:        rgb(35,171,227);
   --md-primary-fg-color--dark:         rgb(11,33,57);
   /*
