--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -857,3 +857,22 @@
   -webkit-mask-image: var(--md-admonition-icon--backward);
           mask-image: var(--md-admonition-icon--backward);
 }
+
+:root {
+  --md-admonition-icon--surprise: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm176.4-80a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm128 32a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM256 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>')
+}
+.md-typeset .admonition.surprise,
+.md-typeset details.surprise {
+  border-color: rgb(105,105,105);
+}
+.md-typeset .surprise > .admonition-title,
+.md-typeset .surprise > summary {
+  color:rgb(35, 35, 37);
+  background-color: rgba(194, 197, 192, 0.664);
+}
+.md-typeset .surprise > .admonition-title::before,
+.md-typeset .surprise > summary::before {
+  background-color: rgb(9, 209, 26);
+  -webkit-mask-image: var(--md-admonition-icon--surprise);
+          mask-image: var(--md-admonition-icon--surprise);
+}
