--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -876,3 +876,22 @@
   -webkit-mask-image: var(--md-admonition-icon--surprise);
           mask-image: var(--md-admonition-icon--surprise);
 }
+
+:root {
+  --md-admonition-icon--mg-glass-location: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM288 176c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 48.8 46.5 111.6 68.6 138.6c6 7.3 16.8 7.3 22.7 0c22.1-27 68.6-89.8 68.6-138.6zm-112 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg>')
+}
+.md-typeset .admonition.mg-glass-location,
+.md-typeset details.mg-glass-location {
+  border-color: rgb(105,105,105);
+}
+.md-typeset .mg-glass-location > .admonition-title,
+.md-typeset .mg-glass-location > summary {
+  color:rgb(35, 35, 37);
+  background-color: rgba(185, 108, 216, 0.486);
+}
+.md-typeset .mg-glass-location > .admonition-title::before,
+.md-typeset .mg-glass-location > summary::before {
+  background-color: rgb(28, 5, 131);
+  -webkit-mask-image: var(--md-admonition-icon--mg-glass-location);
+          mask-image: var(--md-admonition-icon--mg-glass-location);
+}
