--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -895,3 +895,22 @@
   -webkit-mask-image: var(--md-admonition-icon--mg-glass-location);
           mask-image: var(--md-admonition-icon--mg-glass-location);
 }
+
+:root {
+  --md-admonition-icon--flushed: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM256 0a256 256 0 1 0 0 512A256 256 0 1 0 256 0zM160.4 248a24 24 0 1 0 0-48 24 24 0 1 0 0 48zm216-24a24 24 0 1 0 -48 0 24 24 0 1 0 48 0zM192 336c-13.3 0-24 10.7-24 24s10.7 24 24 24H320c13.3 0 24-10.7 24-24s-10.7-24-24-24H192zM160 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm0 128a80 80 0 1 0 0-160 80 80 0 1 0 0 160zm144-80a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm128 0a80 80 0 1 0 -160 0 80 80 0 1 0 160 0z"/></svg>')
+}
+.md-typeset .admonition.flushed,
+.md-typeset details.flushed {
+  border-color: rgb(105,105,105);
+}
+.md-typeset .flushed > .admonition-title,
+.md-typeset .flushed > summary {
+  color:rgb(35, 35, 37);
+  background-color: rgba(247, 203, 10, 0.815);
+}
+.md-typeset .flushed > .admonition-title::before,
+.md-typeset .flushed > summary::before {
+  background-color: rgb(209, 22, 9);
+  -webkit-mask-image: var(--md-admonition-icon--flushed);
+          mask-image: var(--md-admonition-icon--flushed);
+}
