--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -914,3 +914,22 @@
   -webkit-mask-image: var(--md-admonition-icon--flushed);
           mask-image: var(--md-admonition-icon--flushed);
 }
+
+:root {
+  --md-admonition-icon--truck-medical: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 48C0 21.5 21.5 0 48 0H368c26.5 0 48 21.5 48 48V96h50.7c17 0 33.3 6.7 45.3 18.7L589.3 192c12 12 18.7 28.3 18.7 45.3V256v32 64c17.7 0 32 14.3 32 32s-14.3 32-32 32H576c0 53-43 96-96 96s-96-43-96-96H256c0 53-43 96-96 96s-96-43-96-96H48c-26.5 0-48-21.5-48-48V48zM416 256H544V237.3L466.7 160H416v96zM160 464a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm368-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM176 80v48l-48 0c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h48v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V192h48c8.8 0 16-7.2 16-16V144c0-8.8-7.2-16-16-16H240V80c0-8.8-7.2-16-16-16H192c-8.8 0-16 7.2-16 16z"/></svg>')
+}
+.md-typeset .admonition.truck-medical,
+.md-typeset details.truck-medical {
+  border-color: rgb(105,105,105);
+}
+.md-typeset .truck-medical > .admonition-title,
+.md-typeset .truck-medical > summary {
+  color:rgb(35, 35, 37);
+  background-color: rgba(221, 211, 166, 0.815);
+}
+.md-typeset .truck-medical > .admonition-title::before,
+.md-typeset .truck-medical > summary::before {
+  background-color: rgb(209, 22, 9);
+  -webkit-mask-image: var(--md-admonition-icon--truck-medical);
+          mask-image: var(--md-admonition-icon--truck-medical);
+}
