--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,7 @@
+.magnifying-glass {
+  color: #1DA1F2;
+}
+
 .md-content {
   --md-typeset-a-color: #2596be;
 }
@@ -932,4 +936,23 @@
   background-color: rgb(209, 22, 9);
   -webkit-mask-image: var(--md-admonition-icon--truck-medical);
           mask-image: var(--md-admonition-icon--truck-medical);
+}
+
+
+:root {
+  --md-admonition-icon--truck-ramp: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M640 0V400c0 61.9-50.1 112-112 112c-61 0-110.5-48.7-112-109.3L48.4 502.9c-17.1 4.6-34.6-5.4-39.3-22.5s5.4-34.6 22.5-39.3L352 353.8V64c0-35.3 28.7-64 64-64H640zM576 400a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM23.1 207.7c-4.6-17.1 5.6-34.6 22.6-39.2l46.4-12.4 20.7 77.3c2.3 8.5 11.1 13.6 19.6 11.3l30.9-8.3c8.5-2.3 13.6-11.1 11.3-19.6l-20.7-77.3 46.4-12.4c17.1-4.6 34.6 5.6 39.2 22.6l41.4 154.5c4.6 17.1-5.6 34.6-22.6 39.2L103.7 384.9c-17.1 4.6-34.6-5.6-39.2-22.6L23.1 207.7z"/></svg>')
+}
+.md-typeset .admonition.truck-ramp,
+.md-typeset details.truck-ramp {
+  border-color: rgb(255,255,0);
+}
+.md-typeset .truck-ramp > .admonition-title,
+.md-typeset .truck-ramp > summary {
+  background-color: rgba(255,255,0, 0.2);
+}
+.md-typeset .truck-ramp > .admonition-title::before,
+.md-typeset .truck-ramp > summary::before {
+  background-color: rgb(25,25,112);
+  -webkit-mask-image: var(--md-admonition-icon--truck-ramp);
+          mask-image: var(--md-admonition-icon--truck-ramp);
 }
