--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -956,3 +956,22 @@
   -webkit-mask-image: var(--md-admonition-icon--truck-ramp);
           mask-image: var(--md-admonition-icon--truck-ramp);
 }
+
+:root {
+  --md-admonition-icon--clipboard-list: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 0c-41.8 0-77.4 26.7-90.5 64H64C28.7 64 0 92.7 0 128V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H282.5C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM72 272a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zm104-16H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H176c-8.8 0-16-7.2-16-16s7.2-16 16-16zM72 368a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zm88 0c0-8.8 7.2-16 16-16H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H176c-8.8 0-16-7.2-16-16z"/></svg>')
+}
+.md-typeset .admonition.clipboard-list,
+.md-typeset details.clipboard-list {
+  border-color: rgb(235, 235, 235);
+}
+.md-typeset .clipboard-list > .admonition-title,
+.md-typeset .clipboard-list > summary {
+  color:rgb(225, 225, 236);
+  background-color: rgba(5, 6, 75, 0.842);
+}
+.md-typeset .clipboard-list > .admonition-title::before,
+.md-typeset .clipboard-list > summary::before {
+  background-color: rgba(238, 93, 9, 0.966);
+  -webkit-mask-image: var(--md-admonition-icon--clipboard-list);
+          mask-image: var(--md-admonition-icon--clipboard-list);
+}
