updaet circle-info colour

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -595,15 +595,16 @@
   }
   .md-typeset .admonition.circle-info,
   .md-typeset details.circle-info {
-    border-color: rgb(238, 156, 131);
+    border-color: rgb(131, 174, 238);
   }
   .md-typeset .circle-info > .admonition-title,
   .md-typeset .circle-info > summary {
-    background-color: rgba(240, 199, 19, 0.459);
+    color:rgb(238, 236, 231);
+    background-color: rgba(24, 27, 196, 0.863);
   }
   .md-typeset .circle-info > .admonition-title::before,
   .md-typeset .circle-info > summary::before {
-    background-color: rgb(235, 98, 80);
+    background-color: rgb(247, 189, 32);
     -webkit-mask-image: var(--md-admonition-icon--circle-info);
             mask-image: var(--md-admonition-icon--circle-info);
   }
