minor update to admonition

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1012,3 +1012,76 @@
   -webkit-mask-image: var(--md-admonition-icon--graduation-cap);
           mask-image: var(--md-admonition-icon--graduation-cap);
 }
+
+:root {
+  --md-admonition-icon--dumbbell: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M96 64c0-17.7 14.3-32 32-32l32 0c17.7 0 32 14.3 32 32l0 160 0 64 0 160c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-64-32 0c-17.7 0-32-14.3-32-32l0-64c-17.7 0-32-14.3-32-32s14.3-32 32-32l0-64c0-17.7 14.3-32 32-32l32 0 0-64zm448 0l0 64 32 0c17.7 0 32 14.3 32 32l0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32l0 64c0 17.7-14.3 32-32 32l-32 0 0 64c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-160 0-64 0-160c0-17.7 14.3-32 32-32l32 0c17.7 0 32 14.3 32 32zM416 224l0 64-192 0 0-64 192 0z"/></svg>')
+}
+.md-typeset .admonition.dumbbell,
+.md-typeset details.dumbbell {
+  border-color: rgb(255,255,0);
+}
+.md-typeset .dumbbell > .admonition-title,
+.md-typeset .dumbbell > summary {
+  background-color: rgba(255,255,0, 0.2);
+}
+.md-typeset .dumbbell > .admonition-title::before,
+.md-typeset .dumbbell > summary::before {
+  background-color: rgb(25,25,112);
+  -webkit-mask-image: var(--md-admonition-icon--dumbbell);
+          mask-image: var(--md-admonition-icon--dumbbell);
+}
+
+:root {
+  --md-admonition-icon--scroll: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 80l0 48c0 17.7 14.3 32 32 32l16 0 48 0 0-80c0-26.5-21.5-48-48-48S0 53.5 0 80zM112 32c10 13.4 16 30 16 48l0 304c0 35.3 28.7 64 64 64s64-28.7 64-64l0-5.3c0-32.4 26.3-58.7 58.7-58.7L480 320l0-192c0-53-43-96-96-96L112 32zM464 480c61.9 0 112-50.1 112-112c0-8.8-7.2-16-16-16l-245.3 0c-14.7 0-26.7 11.9-26.7 26.7l0 5.3c0 53-43 96-96 96l176 0 96 0z"/></svg>')
+}
+.md-typeset .admonition.scroll,
+.md-typeset details.scroll {
+  border-color: rgb(255,255,0);
+}
+.md-typeset .scroll > .admonition-title,
+.md-typeset .scroll > summary {
+  background-color: rgba(255,255,0, 0.2);
+}
+.md-typeset .scroll > .admonition-title::before,
+.md-typeset .scroll > summary::before {
+  background-color: rgb(25,25,112);
+  -webkit-mask-image: var(--md-admonition-icon--scroll);
+          mask-image: var(--md-admonition-icon--scroll);
+}
+
+:root {
+  --md-admonition-icon--cloud-down: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>')
+}
+.md-typeset .admonition.cloud-down,
+.md-typeset details.cloud-down {
+  border-color: rgb(226, 226, 220);
+}
+.md-typeset .cloud-down > .admonition-title,
+.md-typeset .cloud-down > summary {
+  color:rgb(225, 225, 236);
+  background-color: rgba(15, 15, 2, 0.884);
+}
+.md-typeset .cloud-down > .admonition-title::before,
+.md-typeset .cloud-down > summary::before {
+  background-color: rgba(235, 235, 245, 0.979);
+  -webkit-mask-image: var(--md-admonition-icon--cloud-down);
+          mask-image: var(--md-admonition-icon--cloud-down);
+}
+
+:root {
+  --md-admonition-icon--list-check: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M152.1 38.2c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 113C-2.3 103.6-2.3 88.4 7 79s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zm0 160c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zM224 96c0-17.7 14.3-32 32-32l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32zM160 416c0-17.7 14.3-32 32-32l288 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-288 0c-17.7 0-32-14.3-32-32zM48 368a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg>')
+}
+.md-typeset .admonition.list-check,
+.md-typeset details.list-check {
+  border-color: rgb(255,255,0);
+}
+.md-typeset .list-check > .admonition-title,
+.md-typeset .list-check > summary {
+  background-color: rgba(255,255,0, 0.2);
+}
+.md-typeset .list-check > .admonition-title::before,
+.md-typeset .list-check > summary::before {
+  background-color: rgb(25,25,112);
+  -webkit-mask-image: var(--md-admonition-icon--list-check);
+          mask-image: var(--md-admonition-icon--list-check);
+}
